<resources>
    <string name="app_name">AdMobAble</string>

    <string name="action_settings">设置</string>
    <string name="btn_show_fans_station">展示粉丝站(全屏)</string>
    <string name="btn_show_fans_station_dialog">展示粉丝站(对话框)</string>
    <string name="btn_award_points">奖励10积分</string>
    <string name="btn_spend_points">消费20积分</string>
    <string name="btn_get_online_config">获取有米在线参数</string>
    <string name="btn_check_reach_ntp_time">是否达到指定网络时间</string>
    <string name="btn_check_ad_config">检查广告配置</string>

</resources>
